--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <html dir="rtl"></html>
     <link rel="stylesheet" href="public/css/main.css" />
     <link rel="stylesheet" href="public/csstail/main.css" />
-    <link rel="stylesheet" href="./node_modules/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./public/js/main.js" />
   </head>
   <body>
